--- a/frontend/src/components/photo.styles.css
+++ b/frontend/src/components/photo.styles.css
@@ -10,3 +10,20 @@
     object-fit: cover;
 }
 
+#album {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 25px;
+    object-fit: cover;
+}
+
+#album > img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
+
+#album > img:hover {
+    transition: transform .5s;
+    transform: scale(1.5);
+}
