css and delete request

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -11,11 +11,14 @@
 
 svg {
   background-color: beige;
-  /* width: 600px; */
-  /* height: 600px; */
 }
 
 #project-title {
   font-size: 25px;
   margin: 5px;
+}
+
+#modal-root {
+  display: flex;
+  justify-content: center;
 }
