--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,9 +4,12 @@
   flex-direction: column;
 }
 
-#photo-section {
+#main {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  width: 90%;
+  height: 60vh;
 }
 
 svg {
@@ -14,8 +17,9 @@ svg {
 }
 
 #project-title {
+  height: 5vh;
   font-size: 25px;
-  margin: 5px;
+  margin: 15px;
 }
 
 #modal-root {
