--- a/frontend/src/components/album.styles.css
+++ b/frontend/src/components/album.styles.css
@@ -1,8 +1,8 @@
 #album {
     display: grid;
-    margin-left: 20px;
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(5, 100px);
+    margin: 10px 0px;
+    grid-template-columns: repeat(10, 100px);
+    grid-template-rows: repeat(2, 100px);
     grid-gap: 10px;
 }
 
