--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,7 +10,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 10fr 1fr 1fr;
   grid-template-areas: 
-    "header header"
+    "header-left header-right"
     "photo  tree"
     "tag    edit-tree"
     "album  album";
@@ -23,10 +23,19 @@
   height: 100vh;
 }
 
-#main #title {
-  grid-area: header;
+#main #title-left {
+  grid-area: header-left;
   font-size: 20px; 
-  height: 100%
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#main #title-right {
+  grid-area: header-right;
+  font-size: 20px; 
 }
 
 #main img {
