--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -63,8 +63,8 @@
 #main #album {
   grid-area: album;
   display: grid;
-  grid-template-columns: repeat(10, 100px);
-  grid-template-rows: 100px;
+  grid-template-columns: repeat(auto-fill, minmax(100px,1fr));
+  /* grid-template-rows: 100px; */
   grid-gap: 10px;
   justify-content: center;
 }
