--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,7 +60,23 @@
   grid-area: edit-tree;
   display: grid;
   grid-template-columns: repeat(8, minmax(20px, 1fr));
-  width: 1fr;
+  grid-gap: 5px;
+  font-size: 10px;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  align-items: center;
+  background-color: azure;
+}
+
+#modal2 * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+
 }
 
 #main #album {
