--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,13 +59,14 @@
 #main #modal2 {
   grid-area: edit-tree;
   display: grid;
-  grid-template-columns: repeat(8, minmax(20px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
   grid-gap: 5px;
   justify-content: center;
   align-content: center;
   justify-items: center;
   align-items: center;
   background-color: azure;
+  width: 100%;
 }
 
 #modal2 * {
