--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,9 +6,10 @@
 }
 
 #main {
+  margin: auto;
   display: grid;
   grid-template-columns: repeat(2, minmax(150px, 1fr));
-  grid-template-rows: 1fr 10fr 1fr 1fr;
+  grid-template-rows: 1fr 10fr 1fr 2fr;
   grid-template-areas: 
     "header-left header-right"
     "photo  tree"
@@ -38,7 +39,7 @@
   font-size: 20px; 
 }
 
-#main img {
+#main > img {
   grid-area: photo;
   width: 100%;
   height: 100%;
@@ -77,27 +78,49 @@
   text-align: center;
   width: 100%;
   height: 100%;
-
 }
 
 #main #album {
   grid-area: album;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
-  grid-template-rows: repeat(auto-fit, 100px);
-  justify-content: center;
+  display: flex;
+  overflow: hidden;
+  margin: 0;
   align-content: center;
-  grid-auto-rows: 100px;
-  grid-auto-columns: 100px;
   width: 100%
 }
 
-#album img {
+#slider-left {
+  position: absolute;
+  object-fit: none;
+  object-position: 0 0;
+  left: -6%;
+  width: 256px;
+  height: 512px;
+  cursor: pointer;
+  transform: scale(0.1);
+  bottom: -22%;
+}
+
+#slider-right {
+  position: absolute;
+  object-fit: none;
+  right: -7%;
+  width: 256px;
+  height: 512px;
+  cursor: pointer;
+  bottom: -22%;
+  object-position: -256px;
+  transform: scale(0.1);
+}
+
+.slider-img {
   object-fit: scale-down;
+  width: 100px;
+  height: 100px;
   cursor: pointer;
 }
 
-#album img:hover {
+.slider-img:hover {
   transition: transform .75s;
   transform: scale(1.5);
 }
